# Tiger-Compiler

./: .gitignore  .travis.yml  Makefile  README  README.md
Chapter 1/: Exercise.out  README.md  doxygen_doc.conf  introduce.c  introduce.h  main-page.md  makefile  makefile~  program.c  util.c  util.h
Chapter 10/: myCFGraph.cpp  myCFGraph.h  myDirectedGraph.cpp  myDirectedGraph.h  myLiveness.cpp  myLiveness.h  myMunch.cpp  myMunch.h
Chapter 10/AAI/: myAaiBase.cpp  myAaiBase.h  myComputable.h  myControlable.cpp  myControlable.h  myMovable.cpp  myMovable.h
Chapter 10/tests/: TestFixture.h
Chapter 11/: CXX_mySymbol.h  myCFGraph.cpp  myCFGraph.h  myCanonical.cpp  myLiveness.cpp  myMunch.cpp  myMunch.h  myRegisterAllocation.cpp  myRegisterAllocation.h
Chapter 11/AAI/: myAaiBase.cpp  myAaiBase.h  myComputable.cpp  myControlable.cpp  myControlable.h  myMovable.cpp  myMovable.h
Chapter 12/: CXX_lValueTreater.h  CXX_myAbstractSyntax.h  CXX_myIRTree.h  CXX_mySemantic.h  CXX_myTemp.h  CXX_myTranslate.h  Makefile  TODO  abstractSyntaxMaker.c  forChecker.h  frontTester.c  lex.yy.c  lexString.c  main.cpp  myCanonical.h  myCodeGen.cpp  myCodeGen.h  myEscape.h  myFrame_X86.c  myIRTree.c  myMunch.cpp  myRegisterAllocation.cpp  myRegisterAllocation.h  mySemantic.c  mySymbol.c  mySymbol.h  myTemp.h  myTranslate.c  myTranslate.h  recursiveDecs.h  stringEscape.c  stringEscape.h  tiger_rt.c  tiger_rt.s  tiger_rt_o.c  y.tab.c
Chapter 12/AAI/: myAaiBase.cpp  myAaiBase.h  myComputable.cpp  myComputable.h  myControlable.cpp  myControlable.h  myMovable.cpp  myMovable.h
Chapter 12/testcases/: merge.tig  test1.tig  test10.tig  test11.tig  test12.tig  test13.tig  test14.tig  test15.tig  test16.tig  test17.tig  test18.tig  test19.tig  test2.tig  test20.tig  test21.tig  test22.tig  test3.tig  test4.tig  test5.tig  test7.tig  test8.tig  test9.tig
Chapter 12/tests/: testFixture.h
Chapter 2/: Exercise.out  README.md  doxygen_doc.conf  lex.yy.c  makeMemory.c  makeMemory.h  makeMemory.h.gch  makefile  myDriver.c  myReport.c  myReport.h  myTiger.lex  myTokens.h  stringEscape.c  stringEscape.h  test1.tig
Chapter 2/makeMemory_Test/: Makefile  Test_makeMemory.c  Test_makeMemory.out
Chapter 2/stringEscape_Test/: Test_stringEscape.c  Test_stringEscape.out
Chapter 2/testcases/: string.tig
Chapter 3/: Exercise.out  README.md  doxygen_doc.conf  lex.yy.c  makefile  myReport.c  myReport.h  myTiger.lex  myTiger.y  y.output  y.tab.c  y.tab.h
Chapter 3/testcases/: test7.tig
Chapter 4/: Exercise.out  Makefile  README  README.md  SingleParseResult.txt  doxygen_doc.conf  lex.yy.c  lexString.c  lexString.h  makeMemory.c  makeMemory.h  makeMemory.h.gch  makeString.c  makeString.h  myAbstractSyntax.c  myAbstractSyntax.h  myCheckedMalloc.c  myCheckedMalloc.h  myPrintAbstractSyntax.c  myPrintAbstractSyntax.h  myReport.c  myReport.h  mySymbol.c  mySymbol.h  myTable.c  myTable.h  myTiger.lex  myTiger.y  stringEscape.c  stringEscape.h  y.output  y.tab.c  y.tab.h
Chapter 4/lexString_Test/: Makefile  Test_lexString.c  Test_lexString.out
Chapter 4/makeMemory_Test/: Makefile  Test_makeMemory.c  Test_makeMemory.out
Chapter 4/makeString_Test/: Makefile  Test_makeString.c  Test_makeString.out
Chapter 4/myAbstractSyntax_Test/: Test_myAbstractSyntax.c  makefile  (+1 more)
Chapter 5/: Makefile  README.md  abstractSyntaxMaker.c  breakChecker.c  breakChecker.h  internalForwards.h  lex.yy.c  lexString.c  lexString.h  main.c  makeMemory.c  myAbstractSyntax.h  myEnvironment.c  myEnvironment.h  myError.c  myError.h  myParser.h  myReport.c  myReport.h  mySemantic.c  mySemantic.h  mySymbol.c  mySymbol.h  myTable.c  myTable.h  myTiger.lex  myTiger.y  myTypes.h  recursiveDecs.c  recursiveDecs.h  recursiveFile.c  recursiveFile.h  stringEscape.c  typeChecker.c  typeChecker.h  typeMaker.c  typeMaker.h  y.tab.c
Chapter 6/: breakChecker.h  lexString.h  myAbstractSyntax.h  myEnvironment.c  myEnvironment.h  myError.c  myError.h  myEscape.c  myEscape.h  myFrame.h  myFrame_X86.c  myParser.h  mySemantic.c  mySemantic.h  myTemp.c  myTemp.h  myTiger.y  myTranslate.c  myTranslate.h  recursiveDecs.c  recursiveDecs.h
Chapter 7/: Makefile  breakChecker.c  breakChecker.h  forChecker.c  frontTester.h  lValueTreater.c  lValueTreater.h  lex.yy.c  makeMemory.c  myEnvironment.c  myError.h  myEscape.c  myFrame.h  myFrame_X86.c  myIRTree.c  myIRTree.h  myReport.c  mySemantic.c  myTable.c  myTable.h  myTranslate.c  myTranslate.h  recursiveDecs.c  recursiveDecs.h  typeChecker.c  typeChecker.h
Chapter 7/tests/breakGetter/: Makefile.am  configure.ac  test_breakGetter.c
Chapter 7/tests/lValueTreater/: Makefile.am  test_lValueTreater.c
Chapter 7/tests/myIRTree/: Makefile.am  configure.ac  test_myIRTree.c
Chapter 8/: CXX_myIRTree.h  myCanonical.cpp  myCanonical.h
Chapter 8/tests/myCanonical/: Makefile  Makefile.am  configure.ac  tests.cpp
Chapter 9/: CXX_myFrame.h  CXX_myIRTree.h  CXX_myTable.h  myMunch.cpp  myMunch.h
Compiler/: CXX_frontTester.h  CXX_makeMemory.h  CXX_myEnvironment.h  CXX_myFrame.h  CXX_myIRTree.h  CXX_myReport.h  CXX_myTemp.h  CXX_myTypes.h  Makefile  Makefile~  TODO  abstractSyntaxMaker.c  abstractSyntaxMaker.h  breakGetter.c  breakGetter.h  lex.yy.c  main.cpp  myAbstractSyntax.h  myCFGraph.cpp  myCFGraph.h  myCanonical.cpp  myCodeGen.cpp  myEnvironment.c  myEnvironment.h  myError.c  myEscape.c  myFrame.h  myFrame_X86.c  myIRTree.h  myLiveness.cpp  myLiveness.h  myRegisterAllocation.cpp  myRegisterAllocation.h  myReport.c  mySemantic.c  mySemantic.h  myTable.c  myTemp.c  myTiger.lex  myTiger.y  (+8 more)
travis_scripts/: install_centos.sh  install_centos_docker.sh  install_cppunit_centos.sh  install_cppunit_centos_docker.sh  install_cunit_centos.sh  install_cunit_centos_docker.sh  install_cunit_ubuntu.sh  install_cunit_ubuntu_docker.sh  install_glibc-devel-i686_centos.sh  install_glibc-devel-i686_centos_docker.sh  install_lcov.sh  install_lcov_docker.sh  install_libc6-dev-i386_ubuntu.sh  install_libc6-dev-i386_ubuntu_docker.sh  install_ubuntu.sh  install_ubuntu_docker.sh
(+1709 files in other folders)
