bin_PROGRAMS = test_myIRTree.out
test_myIRTree_out_SOURCES = test_myIRTree.c ../../myIRTree.c ../../mySymbol.c ../../myTable.c ../../makeMemory.c ../testHelper.c ../../myTemp.c
test_myIRTree_out_LDADD = -lcunit 
AM_CFLAGS = -I/home/lgxZJ/Libraries/CUnit/include -L/home/lgxZJ/Libraries/CUnit/lib -std=c99
